--- a/src/index.html
+++ b/src/index.html
@@ -12,21 +12,15 @@
         <div class="scores-container">
             <div class="left-heading">
             <h2>Recent scores</h2>
-            <button>Refresh</button>
-            </div>
-            <table>
-                <tr><td>name: 100</td></tr>
-                <tr><td>name: 87</td></tr>
-                <tr><td>name: 39</td></tr>
-                <tr><td>name: 68</td></tr>
-                <tr><td>name: 71</td></tr>
-            </table>
-        </div>
+            <button id="refresh-button">Refresh</button>
+            <div id="leaderboard"></div>
         <div class="add-scores-container">
             <h2>Add your score</h2>
-            <input type="text">
-            <input type="text">
-            <button>Submit</button>
+            <form id="leaderboardInput">
+            <input id="name-input" type="text">
+            <input id="score-input" type="number">
+            <button id="submit-button">Submit</button>
+        </form>
         </div>
     </section>
 </body>
