--- a/src/index.html
+++ b/src/index.html
@@ -10,17 +10,20 @@
     <h1 class="title">Leaderboard</h1>
     <section class="main-content">
         <div class="scores-container">
-            <div class="left-heading">
+            <div class="scores-head">
             <h2>Recent scores</h2>
             <button id="refresh-button">Refresh</button>
+            </div>
             <div id="leaderboard"></div>
+        </div>
         <div class="add-scores-container">
             <h2>Add your score</h2>
             <form id="leaderboardInput">
-            <input id="name-input" type="text">
-            <input id="score-input" type="number">
+            <input id="name-input" type="text" placeholder="your name...">
+            <input id="score-input" type="number" placeholder="your score...">
             <button id="submit-button">Submit</button>
         </form>
+        </div>
         </div>
     </section>
 </body>
