--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
             <h2>Recent scores</h2>
             <button id="refresh-button">Refresh</button>
             </div>
-            <div id="leaderboard"></div>
+                <table id="leaderboard"></table>
         </div>
         <div class="add-scores-container">
             <h2>Add your score</h2>
